# zwl_2_selfmedia_ai_agent

./: .gitignore  README.md
backend/: .env.example  .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 26321e0bb705_init_business_tables.py
backend/app/: config.py  main.py
backend/app/agent/: checkpointer.py  db_ops.py  graph.py  json_utils.py  state.py
backend/app/agent/nodes/: content_writer.py  human_gates.py  image_generator.py  platform_adapter.py  storyboard_planner.py  topic_generator.py
backend/app/agent/prompts/: content.py  storyboard.py  topic.py  xiaohongshu.py
backend/app/api/: debug.py
backend/app/api/v1/: decisions.py  publish.py  tasks.py
backend/app/core/: logging.py
backend/app/llm/: ark_image.py  ark_text.py  call_logger.py
backend/app/models/: __init__.py  base.py  content.py  image.py  llm_call_log.py  publish_record.py  task.py  topic.py
backend/app/schemas/: task.py
backend/app/services/: publish_service.py  workflow_service.py
backend/scripts/: create_db.py  run_server.py  setup_checkpointer.py  smoke_checkpointer_async.py  test_stage1_ab.py  test_stage1_de.py  test_stage2.py  test_stage2_e2e.py  test_stage4.py  verify_stage0.py  wait_stage.py
docs/: MVP落地方案.md  开发流程.md  开发记录-阶段0.md  开发记录-阶段1.md  开发记录-阶段2.md  开发记录-阶段3.md  开发记录-阶段4.md  项目优化与规划.md  项目方案设计.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: run_e2e.mjs  smoke_ui_redesign.mjs
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  tasks.ts
(+11 files in other folders)
