[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "langchain-openai>=1.3.4",
    "langgraph>=1.2.8",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]
